# jira-whisperer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: colors.py  config.py  jira_analyser.py  jira_config.py  jql_reference.py
test/: test_pipeline.py
