[project]
name = "jira-whisperer"
version = "0.1.0"
description = "AI-powered natural language interface for Jira — ask questions in plain English, get answers via JQL and the Jira REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
